LU-2828 osp: correct osp device finialize order

* Should stop osp precreate thread before releasing its last used
  oid/seq files.

* git commit 71bdcf99 changes the return value of
  writeconf_or_reformat, it's a cleanup function and when writeconf
  does not work it reformat device and should return 0 (success)
  in the end.

Signed-off-by: Bobi Jam <bobijam.xu@intel.com>
Change-Id: I82307dea94bd9ec62088bc931c6b4dd7b90776a0
Reviewed-on: http://review.whamcloud.com/5528
Tested-by: Hudson
Reviewed-by: Niu Yawei <yawei.niu@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>